force-app/main/default/objects/Promotion__c/fields/Credential__c.field-meta.xml
<CustomField>
    <fullName>Credential__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credential</label>
    <referenceTo>Credentials__c</referenceTo>
    <relationshipLabel>Promotions</relationshipLabel>
    <relationshipName>Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>