force-app/main/default/objects/Promotion__c/fields/Current_Deployment_Request__c.field-meta.xml
<CustomField>
    <fullName>Current_Deployment_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Deployment Request</label>
    <referenceTo>Deployment_Request__c</referenceTo>
    <relationshipLabel>Promotions (Current Deployment)</relationshipLabel>
    <relationshipName>Promotions_Current_Deployment</relationshipName>
    <type>Lookup</type>
</CustomField>