force-app/main/default/objects/Promotion__c/fields/Current_Stage__c.field-meta.xml
<CustomField>
    <fullName>Current_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Stage</label>
    <referenceTo>Stage__c</referenceTo>
    <relationshipLabel>Promotions (Current Stage)</relationshipLabel>
    <relationshipName>Promotions_Current_Stage</relationshipName>
    <type>Lookup</type>
</CustomField>