force-app/main/default/objects/Promotion__c/fields/Promotion_Date__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Date__c</fullName>
    <label>Promotion Date</label>
    <type>DateTime</type>
</CustomField>