force-app/main/default/objects/Promotion__c/fields/Promotion_Name__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Name__c</fullName>
    <label>Promotion Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>