force-app/main/default/objects/Promotion__c/fields/Target_Environment__c.field-meta.xml
<CustomField>
    <fullName>Target_Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Environment</label>
    <referenceTo>Deployment_Environment__c</referenceTo>
    <relationshipLabel>Promotions (Target)</relationshipLabel>
    <relationshipName>Promotions_Target</relationshipName>
    <type>Lookup</type>
</CustomField>