force-app/main/default/objects/Promotion__c/fields/Triggered_By__c.field-meta.xml
<CustomField>
    <fullName>Triggered_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Triggered By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Promotions_Triggered</relationshipName>
    <type>Lookup</type>
</CustomField>